# Uma_Club_Fan_Tracking

./: .gitignore  README.md  Script_run.bat  a.py  app.py  fetch_data.py  globals.py  globals_example.py  main.py  pyproject.toml  requirements.txt  ruff.toml  update_installer.bat  verify_menu.py  verify_update.py
.claude/: settings.local.json
.github/workflows/: update.yml
OnlyRex/: globals.py  only_rex_tracker.py
api_data/: 114502546.json  125289696.json  145606097.json  150259101.json  166373193.json  168472480.json  237354394.json  313985233.json  327708043.json  394737639.json  415579817.json  524890130.json  531543637.json  532271884.json  558806657.json  636004975.json  647067019.json  653291031.json  815680661.json  971029133.json
chrono/: chrono_scrape.py  chrono_scraper.py  globals_frame.py  globals_uma_vault.py  main.py
chrono_scrape/: chrono_scrape.py
config/: credentials_example.json  globals.py  globals_chrono.py
scrape_test/: scrape.py
scratch/: check_ender.py  check_sheets.py  inspect_build_df.py  inspect_excel.py  inspect_gspread.py  inspect_june_all.py  inspect_scraped_data.py  read_debug.py  search_logs.py  test_all_club_data.py  test_batch_update_impact.py  test_chrono_api.py  test_dry_run_transition.py  test_fetch.py  test_metadata.py  test_metrics.py  test_multi_chrono.py  test_write_debug.py
src/: chrono_scraper.py  main.py  processing.py  scraper.py  sheets.py  sync.py  umoe_scraper.py  updater.py  utils.py
