[project]
name = "uma-tracking"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-auth>=2.48.0",
    "gspread>=6.2.1",
    "pandas>=3.0.0",
    "protobuf>=6.33.5",
    "requests>=2.31.0",
    "pyinstaller>=6.19.0",
    "python-dotenv",
    "asyncpg>=0.29.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.0",
]
